guestbook/guestbook-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-sample
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/app-root: "/"
    ingress.kubernetes.io/proxy-body-size: 100M
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  rules:
    - host: sample.dev.55places.com
      http:
        paths:
          - backend:
              service:
                name: guestbook-ui
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - secretName: sample-certificate
      hosts:
        - sample.dev.55places.com
